package Iniciar_Partida.Interfaces;

public interface IModelEventosLobby {
    void emitirIniciarPartida();
}
