package Iniciar_Partida.Interfaces;

public interface ObservadorLobby {
    void notificarCambio(IModeloLobby contexto);
}
